--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.0.0",
+    "firebase-functions": "^4.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
